WIP Fixed group filtering but button wrapping is broke.

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,5 +1,5 @@
 .button {
-  width: 140px;
+  width: 120px;
   height: 75px;
   background: #498094; /* TODO: programatic color */
 
