--- a/src/styles/grid.css
+++ b/src/styles/grid.css
@@ -23,3 +23,14 @@
   width: 100%;
   height: 100%;
 }
+
+.item > .item-content > .item {
+  position: relative;
+}
+
+.group {
+  height: 300px;
+  width: 400px;
+  overflow: hidden;
+  background-color: indigo;
+}
